--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   camera: ^0.11.0+2
   image_picker: ^1.1.2
+  http: ^1.2.2
+  file_picker: ^8.1.2
 
 dev_dependencies:
   flutter_test:
