--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.1.2
   http: ^1.2.2
   file_picker: ^8.1.2
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
